# Group7LitterRobot

./: .gitignore  LICENSE
Simulation/nav/scout/scout_description/: CMakeLists.txt
Simulation/nav/scout/scout_gazebo_sim/: package.xml
Simulation/nav/scout/scout_gazebo_sim/launch/: scout_mini_robot_state_publisher.launch.py
Simulation/nav/scout/scout_gazebo_sim/script/: ScoutStriaghtDriver.py
Simulation/nav/scout/scout_gazebo_sim/worlds/: empty.world
misc/nav/scout/: README.md
misc/nav/scout/scout_description/: package.xml
misc/nav/scout/scout_gazebo_sim/: CMakeLists.txt
sapling_ws/: sapling.repos
sapling_ws/install/: local_setup.sh  setup.sh
sapling_ws/install/pick_and_place_pkg/share/pick_and_place_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
sapling_ws/log/: latest_build
sapling_ws/scripts/: install.sh  setup.sh
sapling_ws/src/domains/arm/: README  package.xml  setup.py
sapling_ws/src/domains/arm/grasp_detection/: package.xml  setup.py
sapling_ws/src/domains/arm/grasp_detection/grasp_detection/: grasp_node copy.py  grasp_node.py  grasp_node_fail_state.py  grasp_node_no_viz.py  grasp_node_old.py  grasp_node_service.py
sapling_ws/src/domains/arm/piper_moveit/pick_and_place_pkg/: CMakeLists.txt
sapling_ws/src/domains/arm/piper_moveit/pick_and_place_pkg/action/: PickAndPlace.action
sapling_ws/src/domains/arm/piper_moveit/pick_and_place_pkg/src/: gripper_node.cpp  gripper_node.hpp  gripper_node_main.cpp  home_node.cpp  home_node.hpp  home_node_main.cpp  pick_and_place_node.cpp  pick_and_place_node.hpp  pick_and_place_node_main.cpp  place_node.cpp  place_node.hpp  place_node_main.cpp
sapling_ws/src/domains/arm/piper_sim/piper_mujoco/: CMakeLists.txt  package.xml
sapling_ws/src/domains/arm/piper_sim/piper_mujoco/scripts/: piper_mujoco_ctrl.py  piper_no_gripper_mujoco_ctrl.py
sapling_ws/src/domains/brain/: setup.py
sapling_ws/src/domains/comms/: package.xml  requirements.txt  setup.cfg  setup.py
sapling_ws/src/domains/navigation/: package.xml  setup.py
sapling_ws/src/domains/navigation/rm_localization/: CMakeLists.txt  package.xml
sapling_ws/src/domains/navigation/rm_localization/config/: indoor_ekf_navsat.yaml  outdoor_ekf_navsat.yaml
sapling_ws/src/domains/navigation/rm_localization/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  outdoor_localization_launch.py  rviz_launch.py  slam_launch.py  slam_localization_launch.py
sapling_ws/src/domains/navigation/rm_localization/scripts/: fake_fixed_gps_node.py  fake_gps_from_odom.py
sapling_ws/src/domains/navigation/rm_navigation/: CMakeLists.txt  package.xml
sapling_ws/src/domains/navigation/rm_navigation/config/: nav2_indoor_params.yaml  nav2_outdoor_params.yaml  nav2_params.yaml  nav2_real_params.yaml
sapling_ws/src/domains/navigation/rm_navigation/launch/: bringup_all.launch.py  dual_robot_simulation.launch.py  indoor_gps_one_launch.py  indoor_navigation.launch.py  outdoor_gps_one_launch.py  outdoor_navigation.launch.py  outdoor_sim_navigation.launch.py  real_robot_navigation.launch.py  rm_navigation.launch.py
sapling_ws/src/domains/navigation/rm_navigation/rviz/: nav2.rviz
sapling_ws/src/domains/vision/: package.xml  setup.py
sapling_ws/src/drivers/emlid_reach_m2/: package.xml  setup.cfg  setup.py
sapling_ws/src/misc/: package.xml  setup.cfg  setup.py
sapling_ws/src/misc/misc/: sapling_emergency_stop_node.py
sapling_ws/src/sapling/: CMakeLists.txt  package.xml
sapling_ws/src/sapling_description/: CMakeLists.txt  package.xml
sapling_ws/src/sapling_description/urdf/: sapling_description.urdf.xacro
sapling_ws/src/sapling_interfaces/: CMakeLists.txt  package.xml
sapling_ws/src/sapling_interfaces/msg/: FollowerStatus.msg  LeaderPose.msg  LoraTransmission.msg
sapling_ws/src/sapling_interfaces/srv/: AreaCoords.msg  AreaCoords.srv
sapling_ws/src/service_test/: package.xml  setup.py
sapling_ws/src/service_test/service_test/: service_test_node.py
scout_onelaunch/: Dockerfile  docker-compose.yaml
scout_onelaunch/src/rm_localization/: package.xml
scout_onelaunch/src/rm_localization/launch/: navigation_launch.py  rviz_launch.py
scout_onelaunch/src/rm_navigation/config/: fixed_obstacles.yaml
scout_onelaunch/src/rm_navigation/launch/: bringup_all.launch.py  fb_robot_navigation.launch.py  real_robot_navigation.launch.py
scout_onelaunch/src/rm_navigation/rviz/: nav2.rviz
scout_onelaunch/src/robot_comm_bridge/: package.xml  setup.py
scout_onelaunch/src/robot_comm_bridge/robot_comm_bridge/: udp_receiver.py  udp_sender.py
scout_onelaunch/src/robot_description/config/: bridge_gazebo_follower.yaml
scout_onelaunch/src/robot_description/launch/: real_robot.launch.py
scout_onelaunch/src/robot_description/urdf/: follower_robot.urdf.xacro  robot.urdf.xacro
scout_onelaunch/src/waypoint_navigation_pkg/: setup.cfg  setup.py
scout_onelaunch/src/waypoint_navigation_pkg/waypoint_navigation_pkg/: fake_litter_interrupt_2.py  fake_litter_interrupt_node.py  front_back_node.py  front_orient_node.py  gps_follower_behaviour_node.py  lawnmower_interrupt_node.py  leader.py  slam_follower_behavior_node.py  waypoint_navigation_node.py  waypoints.yaml  yaml_obstacle_publisher.py
scout_ws1/: Dockerfile  docker-compose.yaml  readme.md
scout_ws1/src/rm_localization/: CMakeLists.txt
scout_ws1/src/rm_localization/launch/: bringup_launch.py  (+3 more)
scout_ws1/src/rm_navigation/: CMakeLists.txt  package.xml
scout_ws1/src/robot_description/: package.xml
scout_ws1/src/robot_description/config/: bridge_gazebo.yaml
scout_ws1/src/robot_description/launch/: Fb_real_robot.launch.py  simulation.launch.py
scout_ws1/src/robot_description/urdf/: robot.urdf.xacro
scout_ws1/src/robot_description/urdf/mobile_robot/: scout_v2.urdf.xacro
scout_ws1/src/waypoint_navigation_pkg/: package.xml  setup.py
scout_ws1/src/waypoint_navigation_pkg/waypoint_navigation_pkg/: gps_follower_behaviour_node.py  leader.py  waypoint_navigation_node.py  waypoints.yaml
ucs/: app.py
ucs/templates/: 404.html  index.html
(+378 files in other folders)
