<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>robot_description</name>
	<version>0.0.0</version>
	<description>This package contains the URDF and XACRO macros for the definition of the configuration files
		for the AgileX Scout robot. This package supports visualization and control in Gazebo
	</description>

	<maintainer email="felipec13@al.insper.edu.br">felipec13</maintainer>
  	<license>TODO: License declaration</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>urdf</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>joint_state_publisher_gui</exec_depend>
	<depend>pluginlib</depend>
	<depend>ignition-fortress</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>ament_cmake_gtest</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>