<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_navigation_pkg</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for waypoint-based navigation using Nav2</description>
  <maintainer email="felipec13@al.insper.edu.br">felipec13</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>